--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
         }
     ],
     "require": {
-        "php": "^7.2"
+        "php": "^7.2|^8.0"
     },
     "require-dev": {
-        "symfony/var-dumper": "^4.3",
-        "orchestra/testbench": "^4.0"
+        "orchestra/testbench": "~3.6.7 || ~3.7.8 || ~3.8.6 || ^4.8 || ^5.2 || ^6.0",
+        "symfony/var-dumper": "^5.3"
     },
     "autoload": {
         "psr-4": {
